...
    <string name="invite">Invite</string>
    <string name="action_add_person">Add member</string>
    <string name="action_remove_person">Remove member</string>
    <string name="action_change_roles">Change roles</string>
    <string name="dialog_add_member_title">Add a member</string>
    <string name="dialog_add_member_text">Enter username or email:</string>
    <string name="add">Add</string>

    <string name="title_activity_modify_group">ModifyGroup</string>
    <string name="modify_group_add">Add members</string>
    <string name="modify_group_roles">Create new roles</string>

    <string name="CreateEditEarlyDate">Invalide date (already past)</string>
...
    <string name="cost_contact">Do you want to open the SMS application to invite %s? It may imply some additional costs.</string>
    <string name="body_contact">Hi,\nI am using the Open GM app. It is so useful to manage groups. Tell me when you have your account!</string>

    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_member_profile">Member Profile</string>

    <string name="action_add_role">Add role</string>
    <string name="action_remove_role">Remove role</string>
    <string name="action_modify_permissions">Modify Permissions</string>
    <string name="dialog_add_role_title">Add Role</string>
    <string name="dialog_add_role_role_hint">Enter role name</string>
    <string name="save">Save</string>
    <string name="dialog_modify_permissions_title">Modify Permissions</string>
    <string name="title_activity_create_poll">CreatePollActivity</string>

...
