<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/role_checkbox"
        android:checked="false"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/role_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Role Name"
        android:id="@+id/role_name"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/role_checkbox" />
</RelativeLayout>